# lease2fip-hcloud

./: .dockerignore  .envrc  .gitignore  Brewfile  Cargo.toml  Dockerfile  README.md  build.rs  config.yaml  rust-toolchain.toml  taskfile.yaml
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: build.yml  validate-pull-request.yml
kustomize/base/: deployment.yaml  kustomization.yaml  rbac.yaml
kustomize/example/: kustomization.yaml
scripts/: build-binary  check-formatting  configure-rust  lint  start-kcp  stop-kcp
src/: main.rs
